--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "test",
+  "name": "shopmayanh",
   "version": "1.0.0",
-  "description": "",
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
@@ -32,5 +31,6 @@
     "morgan": "^1.10.0",
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.21"
-  }
+  },
+  "description": ""
 }
